src/pages/Client/Course/course.module.css
/** @format */

.superWrap {
  position: relative;
  min-height: 80vh;
  margin-top: 4.25rem;
  margin-bottom: 2rem;
}

.container {
  padding: 0 1.5rem;
}

.wrapper {
  max-width: 45.625rem;
  margin: 0 auto;
  padding-top: 35vh;
}

.cover {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 60vh;
  object-fit: cover;
  filter: blur(1rem);
  z-index: -1;
}

.videoWrap {
  display: flex;
  align-items: center;
  justify-content: center;
}
.video {
  width: 50rem;
  height: 35rem;
}

.description {
  white-space: pre-wrap;
}

.comment {
  background-color: var(--bg-sub);
  padding: 1rem 1.5rem;
  border-radius: 0.5rem;
  box-shadow: 0 0 2px var(--grey-4);
  margin-top: 1rem;
}

.commentTitle {
  color: var(--text);
  margin-bottom: 1rem;
}

.input {
  width: 100%;
  height: 100% !important;
  margin-right: 1rem;
  margin-bottom: 0;
}

.control {
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: space-between;
  margin-top: 1rem;
}

@media (min-width: 768px) {
  .container {
    margin-top: 5.5rem;
  }
  .wrapper {
    display: flex;
  }
}

@media (min-width: 1280px) {
  .wrapper {
    max-width: 69.0625rem;
  }
}

